--- a/index.css
+++ b/index.css
@@ -1,12 +1,12 @@
 *{
-    margin: 0 auto ;
+    margin: 0 auto ;    
     padding: 0;
     box-sizing: border-box;
 }
 
-.container {
-    max-width: 1280px;
-    padding: 10px;
+.wrapper {
+    position: relative;
+    /* margin: auto; */
 }
 .welcome{
     padding: 8px 0;
@@ -31,7 +31,7 @@ ul li:hover{
 ul li::before{
     content: "";
     width: 100%;
-    height: 3px;
+    height: 2px;
     border-radius: 3px;
     background-color: #000;   
     position: absolute;
@@ -43,11 +43,18 @@ ul li:hover::before{
     animation: animatedAccount 1s 1;
 }
 
-header{
+.header{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 50px;
     display: flex;
     justify-content: space-around;
     line-height: 50px;
+    padding: 0 50px;
+    z-index: 2;
+    background: rgba(248, 248, 248, 0.807);
 }
 .logo{
     width: 20%;
@@ -86,12 +93,7 @@ nav{
     display: none;
     text-align: center;
 }
-/* .account  li::before {
-    content: "";
-    width: 100%;
-    height: 20px;
-    background-color: #000;
-} */
+
 .account:hover{
     /* background-color: green; */
     transition: all 0.5s;
@@ -134,6 +136,115 @@ nav{
     font-size: 18px;
 }
 
+.slide{
+    width: 100%;   
+     position: relative;
+    height: 600px;
+    z-index: 1;
+   /* margin-bottom: 50px; */
+}
+.slide::before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+  
+
+}
+.slide .carousel-item{
+    margin-top: 0;
+   width: 100% ;
+   height: 800px    ;
+}
+
+.slide .carousel-item  img{
+    margin-top: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+.new-product{
+    padding: 0 80px;
+    margin-top: 200px;
+}
+.new-product h3{
+    font-size: 20px;
+    color: #555;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    border: 1px solid #bebebe;
+    display: inline-block;
+    font-weight: 600;
+}
+
+.headline{
+    margin-top: 50px ;
+    margin-bottom: 50px;
+    text-align: center;
+}
+.row .card{
+    width: 400px;
+    border: none;
+    margin: 20px auto;
+    padding: 0;
+}
+.row .card .card-content{
+    width: 100%;
+    padding: 0 60px;
+}
+.row .card img{
+    /* max-width: 100%; */
+    width: 100%;
+    height: 100%;
+    /* width: 100%; */
+    display: block;
+}
+.row .card span{
+    color: #000;
+    font-weight: 600;
+    font-size: 18px;
+}
+.row .card p{
+    font-size: 20px;
+}
+.row .card .card-body{
+    position: relative;
+    overflow: hidden;
+    /* padding: 0; */
+    padding: 0 ;
+}
+.row .card .card-body .by-now 
+{   
+    position: absolute;
+    bottom: -48px;
+    /* left: auto; */
+    left: 0px;
+    width: 85%;
+    padding: 10px 0;
+    background-color: #446084;
+    font-size: 18px;
+    margin: 0 30px;
+    opacity: 0.85;
+}
+.row .card .card-body a{
+    color: #fff;
+    display: block;
+    text-align: center;
+}
+.row .card .card-body:hover .by-now{
+    bottom: 0px;
+    display: block;
+    transition: 0.25s ease-in-out;
+}
+.row .card .card-body:hover img{
+    opacity: 0.85;
+    transition: 0.25s ease-in-out;
+}
+
 
 @keyframes animatedAccount{
     0%{
@@ -144,5 +255,15 @@ nav{
     }
     100%{
         transform: scale(0,1);
+    }
+}
+
+@keyframes animatedByNow{
+    0%{
+        transform: scale(1,0);
+    }
+    100%{
+        transform: scale(1,1);
+
     }
 }
