--- a/index.css
+++ b/index.css
@@ -246,6 +246,106 @@ nav{
 }
 
 
+/* --------------------------------SALE */
+
+
+.sale-product h3{
+    font-size: 20px;
+    color: #555;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    border: 1px solid #bebebe;
+    display: inline-block;
+    font-weight: 600;
+}
+
+.sale-product{
+    padding: 0 80px;
+    margin-top: 200px;
+}
+.sale-product h3{
+    font-size: 20px;
+    color: #555;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    border: 1px solid #bebebe;
+    display: inline-block;
+    font-weight: 600;
+}
+
+.headline{
+    margin-top: 50px ;
+    margin-bottom: 50px;
+    text-align: center;
+}
+.sale-product .row .card{
+    width: 400px;
+    border: none;
+    margin: 20px auto;
+    padding: 0;
+    position: relative;
+}
+.sale-product .row .card .logo-sale{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 150px;
+    height: auto;
+}
+.row .card .card-content{
+    width: 100%;
+    padding: 0 60px;
+}
+.row .card img{
+    /* max-width: 100%; */
+    width: 100%;
+    height: 100%;
+    /* width: 100%; */
+    display: block;
+}
+.row .card span{
+    color: #000;
+    font-weight: 600;
+    font-size: 18px;
+}
+.row .card p{
+    font-size: 20px;
+}
+.row .card .card-body{
+    position: relative;
+    overflow: hidden;
+    /* padding: 0; */
+    padding: 0 ;
+}
+.row .card .card-body .by-now 
+{   
+    position: absolute;
+    bottom: -48px;
+    /* left: auto; */
+    left: 0px;
+    width: 85%;
+    padding: 10px 0;
+    background-color: #446084;
+    font-size: 18px;
+    margin: 0 30px;
+    opacity: 0.85;
+}
+.row .card .card-body a{
+    color: #fff;
+    display: block;
+    text-align: center;
+}
+.row .card .card-body:hover .by-now{
+    bottom: 0px;
+    display: block;
+    transition: 0.25s ease-in-out;
+}
+.row .card .card-body:hover img{
+    opacity: 0.85;
+    transition: 0.25s ease-in-out;
+}
+
+
 @keyframes animatedAccount{
     0%{
         transform: scale(0,1);
